--- a/.github/workflows/run_form_tests.yml
+++ b/.github/workflows/run_form_tests.yml
@@ -21,7 +21,7 @@ jobs:
         node-version: [12.x]
 
     env:
-      BASE_URL: https://apps-dev.suffolklitlab.org
+      BASE_URL: ${{ secrets.SERVER_URL }}
       PLAYGROUND_EMAIL: ${{ secrets.PLAYGROUND_EMAIL }}
       PLAYGROUND_PASSWORD: ${{ secrets.PLAYGROUND_PASSWORD }}
       PLAYGROUND_ID: ${{ secrets.PLAYGROUND_ID }}
