--- a/docassemble/MA209AProtectiveOrder/data/questions/209a_package.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209a_package.yml
@@ -6,6 +6,7 @@ translations:
 include:
  - docassemble.AssemblyLine:al_package.yml
  - docassemble.MassAccess:massaccess.yml
+ - translation_support.yml
  - 209A_page_1.yml
  - 209A_page_2.yml
  - 209A_child-support.yml
@@ -17,7 +18,6 @@ include:
  - 209A_plaintiff-confidential.yml 
  - escape.yml
  - 209A_attach_exhibits.yml 
- - translation-support.yml
 ---
 metadata:
   title: |
