--- a/docassemble/MA209AProtectiveOrder/data/questions/translation_support.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/translation_support.yml
@@ -1,36 +1,6 @@
 ---
-modules:
-  - docassemble.AssemblyLine.language
----
-initial: True
-code: |
-  process_action()
----
-initial: True
-code: |
-  set_language(user_language)
----
-code: |
-  if url_args.get('lang'):
-    user_language = url_args.get('lang')
-  else:
-    user_language= 'en'
----
-event: change_language
-code: |
-  if 'lang' in action_arguments():
-    user_language = action_argument('lang')
-    set_language(user_language)
----
-#comment: |
-#    % if get_config('debug'):
-#    `id: ${ user_info().question_id }`  
-#    `Package: ${ user_info().package } ${ package_version_number }; ${ al_version }`
-#    <div data-variable="${ encode_name(str( user_info().variable )) }" id="sought_variable" aria-hidden="true" style="display: none;"></div>
-#    % endif  
-default screen parts:
-  pre: |    
-    ${get_language_list(get_tuples(['en','es']),current=user_language)}
+include:
+  - docassemble.AssemblyLine:al_language.yml
 ---
 language: es
 sections:
